// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_tree should hide disabbled integration options 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
        values={Object {}}
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "edit_post": Object {
            "editTimeLimitButton": <Connect(EditPostTimeLimitButton)
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          "create_private_channel",
          "edit_post",
          "delete_post",
          Object {
            "combined": true,
            "id": "reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on default data 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
        values={Object {}}
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "edit_post": Object {
            "editTimeLimitButton": <Connect(EditPostTimeLimitButton)
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          "create_private_channel",
          "edit_post",
          "delete_post",
          Object {
            "combined": true,
            "id": "reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on read only 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
        values={Object {}}
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "edit_post": Object {
            "editTimeLimitButton": <Connect(EditPostTimeLimitButton)
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          "create_private_channel",
          "edit_post",
          "delete_post",
          Object {
            "combined": true,
            "id": "reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
        ]
      }
      readOnly={true}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on system scope 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
        values={Object {}}
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "edit_post": Object {
            "editTimeLimitButton": <Connect(EditPostTimeLimitButton)
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          "create_private_channel",
          "edit_post",
          "delete_post",
          Object {
            "combined": true,
            "id": "reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="system_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on team scope 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
        values={Object {}}
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "edit_post": Object {
            "editTimeLimitButton": <Connect(EditPostTimeLimitButton)
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          "create_private_channel",
          "edit_post",
          "delete_post",
          Object {
            "combined": true,
            "id": "reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="team_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot with parentRole with permissions 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
        values={Object {}}
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "edit_post": Object {
            "editTimeLimitButton": <Connect(EditPostTimeLimitButton)
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={
        Object {
          "permissions": "invite_user",
        }
      }
      permissions={
        Array [
          "create_private_channel",
          "edit_post",
          "delete_post",
          Object {
            "combined": true,
            "id": "reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="system_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;
